samples/_failures_safe/1761331212_614e0c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c9c18c2.c: In function ‘main’:
./samples/SAFE/__tmp_6c9c18c2.c:149:12: error: missing terminating " character
  149 |     printf("Original
      |            ^~~~~~~~~
./samples/SAFE/__tmp_6c9c18c2.c:149:5: error: expected expression at end of input
  149 |     printf("Original
      |     ^~~~~~
./samples/SAFE/__tmp_6c9c18c2.c:149:5: error: expected declaration or statement at end of input
